[Fix][UI] Fix the problem of too large spacing in operation.

--- a/dolphinscheduler-ui/src/views/projects/workflow/definition/index.module.scss
+++ b/dolphinscheduler-ui/src/views/projects/workflow/definition/index.module.scss
@@ -72,14 +72,6 @@
   margin-top: 20px;
 }
 
-.operation {
-  > div {
-    > div {
-      margin-right: 5px !important;
-    }
-  }
-}
-
 .startup {
   align-items: center;
   > div:first-child {
